Update phone number to (702) 518-8813

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pool Cleaning Service Summerlin | Weekly Pool Maintenance Las Vegas | Summerlin Pools</title>
-    <meta name="description" content="Professional pool cleaning service in Summerlin, Las Vegas. Weekly, biweekly & monthly pool maintenance starting at $120/month. Licensed, insured, same-day quotes. Call (702) XXX-XXXX">
+    <meta name="description" content="Professional pool cleaning service in Summerlin, Las Vegas. Weekly, biweekly & monthly pool maintenance starting at $120/month. Licensed, insured, same-day quotes. Call (702) 518-8813">
     <meta name="keywords" content="pool cleaning summerlin, pool service summerlin, pool maintenance las vegas, weekly pool cleaning, pool cleaning near me, summerlin pools">
     
     <!-- Local SEO -->
@@ -27,7 +27,7 @@
         "name": "Summerlin Pools",
         "description": "Professional pool cleaning and maintenance service in Summerlin, Las Vegas",
         "url": "https://summerlinpools.com",
-        "telephone": "+1-702-XXX-XXXX",
+        "telephone": "+1-702-518-8813",
         "address": {
             "@type": "PostalAddress",
             "addressLocality": "Las Vegas",
@@ -409,7 +409,7 @@
                 <li><a href="#areas">Service Areas</a></li>
                 <li><a href="#contact">Get Quote</a></li>
             </ul>
-            <a href="tel:702XXXXXXX" class="phone-cta">📞 (702) XXX-XXXX</a>
+            <a href="tel:7025188813" class="phone-cta">📞 (702) 518-8813</a>
         </nav>
     </header>
 
@@ -419,7 +419,7 @@
             <h1>Crystal Clear Pools, Every Time</h1>
             <p class="subheading">Professional Pool Cleaning & Maintenance in Summerlin</p>
             <div class="hero-cta">
-                <a href="tel:702XXXXXXX" class="btn btn-primary">Call for Same-Day Quote</a>
+                <a href="tel:7025188813" class="btn btn-primary">Call for Same-Day Quote</a>
                 <a href="#contact" class="btn btn-secondary">Get Online Quote</a>
             </div>
         </div>
@@ -527,7 +527,7 @@
                     
                     <h3 style="margin-top: 2rem;">Prefer to Call?</h3>
                     <p style="font-size: 1.5rem; font-weight: bold; color: var(--primary);">
-                        📞 (702) XXX-XXXX
+                        📞 (702) 518-8813
                     </p>
                     <p>Monday - Saturday: 7:00 AM - 7:00 PM</p>
                 </div>
